--- a/UOWConsult/Base.lproj/Main.storyboard
+++ b/UOWConsult/Base.lproj/Main.storyboard
@@ -317,8 +317,10 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="editButton" destination="fox-tR-1FZ" id="wfL-Be-BbN"/>
                         <outlet property="emailLabel" destination="HrK-UC-04O" id="7ph-eT-v57"/>
                         <outlet property="usernameLabel" destination="FJG-zm-S3x" id="tXR-gD-X24"/>
+                        <segue destination="kq2-rE-AGf" kind="show" id="fap-1w-upT"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AGi-mY-4gY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -446,6 +448,116 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KXj-qg-a0k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="872" y="-240"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="OOJ-Ey-PMU">
+            <objects>
+                <tableViewController title="Settings" id="kq2-rE-AGf" customClass="SettingViewController" customModule="UOWConsult" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="7dJ-lK-4hh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <sections>
+                            <tableViewSection headerTitle="Profile" id="N5n-N2-VqQ">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="88" id="q7Y-ul-Mde">
+                                        <rect key="frame" x="0.0" y="113.5" width="600" height="88"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="q7Y-ul-Mde" id="fHB-Li-yFG">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="87.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H3j-dx-FUP">
+                                                    <rect key="frame" x="18" y="13" width="79" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mWg-ns-jDb">
+                                                    <rect key="frame" x="107" y="46" width="186" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="186" id="Aci-lH-Xdp"/>
+                                                        <constraint firstAttribute="height" constant="30" id="v6U-xz-QTn"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ASk-uV-c7M">
+                                                    <rect key="frame" x="56" y="51" width="41" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8fW-6b-IBD">
+                                                    <rect key="frame" x="107" y="8" width="186" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="186" id="1vN-dz-aDH"/>
+                                                        <constraint firstAttribute="width" constant="186" id="nq8-RW-T1p"/>
+                                                        <constraint firstAttribute="height" constant="30" id="vMb-Gg-dkr"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8fW-6b-IBD" firstAttribute="leading" secondItem="fHB-Li-yFG" secondAttribute="leading" constant="107" id="7Wh-T0-svj"/>
+                                                <constraint firstItem="ASk-uV-c7M" firstAttribute="top" secondItem="H3j-dx-FUP" secondAttribute="bottom" constant="17" id="Ie2-St-Y5C"/>
+                                                <constraint firstItem="8fW-6b-IBD" firstAttribute="centerY" secondItem="H3j-dx-FUP" secondAttribute="centerY" id="Lw7-oO-Mr7"/>
+                                                <constraint firstItem="mWg-ns-jDb" firstAttribute="top" secondItem="8fW-6b-IBD" secondAttribute="bottom" constant="8" symbolic="YES" id="NeV-DO-Uc5"/>
+                                                <constraint firstItem="ASk-uV-c7M" firstAttribute="top" secondItem="H3j-dx-FUP" secondAttribute="bottom" constant="17" id="Rto-bM-CHg"/>
+                                                <constraint firstItem="H3j-dx-FUP" firstAttribute="top" secondItem="fHB-Li-yFG" secondAttribute="topMargin" constant="5" id="TT6-7c-oD7"/>
+                                                <constraint firstItem="8fW-6b-IBD" firstAttribute="trailing" secondItem="mWg-ns-jDb" secondAttribute="trailing" id="TiG-xh-uzy"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ASk-uV-c7M" secondAttribute="bottom" constant="7.5" id="X8m-ZN-tgx"/>
+                                                <constraint firstItem="mWg-ns-jDb" firstAttribute="leading" secondItem="ASk-uV-c7M" secondAttribute="trailing" constant="10" id="a5d-lD-K04"/>
+                                                <constraint firstItem="8fW-6b-IBD" firstAttribute="leading" secondItem="mWg-ns-jDb" secondAttribute="leading" id="i2Z-AY-Rhy"/>
+                                                <constraint firstItem="8fW-6b-IBD" firstAttribute="leading" secondItem="H3j-dx-FUP" secondAttribute="trailing" constant="10" id="iKK-qL-UvP"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Menu" id="c39-EV-iOS">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3SG-7U-FNw">
+                                        <rect key="frame" x="0.0" y="251.5" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3SG-7U-FNw" id="nUs-S9-ZDG">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvc-6Z-yFO">
+                                                    <rect key="frame" x="251" y="7" width="98" height="30"/>
+                                                    <state key="normal" title="Save Changes"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="yvc-6Z-yFO" firstAttribute="top" secondItem="nUs-S9-ZDG" secondAttribute="topMargin" constant="-1" id="KqO-yk-rqf"/>
+                                                <constraint firstItem="yvc-6Z-yFO" firstAttribute="centerX" secondItem="nUs-S9-ZDG" secondAttribute="centerX" id="OQ0-4E-E91"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="kq2-rE-AGf" id="nft-f7-Eg6"/>
+                            <outlet property="delegate" destination="kq2-rE-AGf" id="zlG-46-yFu"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Settings" id="UBG-DD-t4y">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="iMB-2H-BxI"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="cIv-4k-dmW"/>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="ASk-uV-c7M" id="XVm-T7-oaE"/>
+                        <outlet property="usernameLabel" destination="H3j-dx-FUP" id="r18-QG-1ud"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Ez-3q-NWQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2421" y="1275"/>
         </scene>
     </scenes>
 </document>
